# ETL-Data-Pipeline

./: .gitignore  ELT-Data-Pipeline.twb  README.md  main.py  pyproject.toml  requirements.txt
Workbooks/: Filters & Highlighting.twb  MyCleanData.twb  MyStory.twb
data/staging/: college_scorecard_20260323_220615.json  college_scorecard_20260323_220615.parquet  college_scorecard_20260323_220923.json  college_scorecard_20260323_220923.parquet  college_scorecard_20260323_220958.json  college_scorecard_20260323_220958.parquet
docs/: data_dictionary.md
higher_ed_data_pipeline/: __init__.py  runner.py
higher_ed_data_pipeline/config/: __init__.py  settings.py
higher_ed_data_pipeline/etl/: __init__.py  college_scorecard_client.py  college_scorecard_extractor.py  extract.py  load.py  pipeline.py  transform.py
higher_ed_data_pipeline/sources/: __init__.py  base.py  college_scorecard.py  ipeds.py
higher_ed_data_pipeline/storage/: __init__.py
higher_ed_data_pipeline/utils/: __init__.py  helpers.py  logging.py
scripts/: extract_scorecard.py  inspect_api.py  load.py  pipeline_summary.py  test_db_connection.py  test_duplicate_detection.py  test_extraction.py  test_transform.py  test_validate.py  transform.py  validate.py
sql/: analytics.sql  views.sql
tests/: __init__.py  test_settings.py
